[project]
name = "reywechat"
version = "1.1.24"
description = "WeChat client control method set."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = ["rey", "reyxbo", "wechat", "robot", "helper"]
authors = [
    {name = "Rey", email = "reyxbo@163.com"}
]
dependencies = [
    "reydb",
    "reykit",
    "reyserver"
]

[project.urls]
Homepage = "https://www.reyxbo.com"
Repository = "https://github.com/reyxbo/reywechat-py.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
